kcmodule/common/PowerProfileModel.cpp
@@ -58,7 +58,7 @@ PowerProfileModel::PowerProfileModel(QObject *parent)
 
 QVariant PowerProfileModel::data(const QModelIndex &index, int role) const
 {
-    if (index.row() > m_data.size()) {
+    if (index.row() < 0 || index.row() >= m_data.size()) {
         return {};
     }
 
